--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "scripts": {
     "build": "node build.js && node scripts/exportComponentTree.js",
-    "watch": "node build.js --watch"
+    "watch": "node build.js --watch",
+    "find-dead-code": "ts-prune -e"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.82.0",
+    "@types/node": "^25.0.8",
     "esbuild": "^0.24.0",
     "typescript": "^5.6.0"
   }
